fixed map overflow issue

--- a/Core/client/src/assets/styles.scss
+++ b/Core/client/src/assets/styles.scss
@@ -7,11 +7,14 @@
     text-align: center;
     color: #2c3e50;
 }
-#app{
+body{
     width: 100vw;
     height: 100vh;
 }
-
+#app{
+    width: 100%;
+    height: 100%;
+}
 .grid-container{
     display: grid;
     width: 100%;
@@ -36,8 +39,11 @@
     }
     .map-wrap{
         grid-area: map;
+        overflow: hidden;
         iframe{
             border: none;
+            width: 100%;
+            height:100%;
         }
     }
     
